# tork-orm

./: Cargo.toml  README.md  current-risks.md  docker-compose.yml  rust-toolchain.toml
crates/tork-orm/: Cargo.toml
crates/tork-orm-cli/: Cargo.toml
crates/tork-orm-cli/src/: cli.rs  config.rs  lib.rs  output.rs  scaffold.rs  style.rs
crates/tork-orm-cli/src/commands/: create.rs  down.rs  init.rs  mod.rs  redo.rs  status.rs  up.rs
crates/tork-orm-cli/tests/: cli_args.rs  e2e.rs  scaffold.rs
crates/tork-orm-config/: Cargo.toml
crates/tork-orm-config/src/: lib.rs
crates/tork-orm-core/: Cargo.toml
crates/tork-orm-core/src/: bridge.rs  database.rs  enums.rs  error.rs  executor.rs  index.rs  lib.rs  model.rs  preload.rs  registry.rs  relation.rs  row.rs  transaction.rs  value.rs
crates/tork-orm-core/src/dialect/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  writer.rs
crates/tork-orm-core/src/driver/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/tork-orm-core/src/migration/: checksum.rs  ddl.rs  files.rs  generate.rs  introspect.rs  mod.rs  registry.rs  render.rs  runner.rs  schema.rs  store.rs
crates/tork-orm-core/src/query/: ast.rs  column.rs  expr.rs  func.rs  mod.rs  projection.rs  queryset.rs  union.rs  write.rs
crates/tork-orm-core/tests/: cte.rs  datetime.rs  enum_render.rs  fulltext.rs  func_expr.rs  in_memory_lifecycle.rs  index_builder.rs  index_render.rs  index_types.rs  introspect.rs  migration_checksum.rs  migration_files.rs  migration_generate.rs  migration_render.rs  migration_runner.rs  mysql_render.rs  postgres_render.rs  sqlite_smoke.rs  transaction_basic.rs  transaction_builder.rs  transaction_closure.rs  transaction_savepoint.rs  window.rs
crates/tork-orm-macros/: Cargo.toml
crates/tork-orm-macros/src/: common.rs  db_enum.rs  lib.rs  migration.rs  model.rs  query_result.rs  relations.rs
crates/tork-orm/src/: lib.rs
crates/tork-orm/tests/: aggregates.rs  chunk.rs  column_expr.rs  enum_basic.rs  enum_sqlite.rs  find.rs  fk_and_check.rs  framework_integration.rs  func_builders.rs  functional_indexes.rs  generate.rs  hooks.rs  lifecycle.rs  migration_e2e.rs  model_derive.rs  model_indexes.rs  model_registry.rs  mysql_live.rs  pagination.rs  pluck.rs  postgres_live.rs  preload.rs  preload_same_type.rs  query_locking.rs  queryset.rs  relations.rs  self_join.rs  soft_delete.rs  table_indexes.rs  transaction_macro.rs  union.rs  writes.rs
docs/: 01-introduction.md  02-models.md  03-indexing.md  04-queries.md  05-writes.md  06-relations-and-preloading.md  07-aggregates-and-projections.md  08-migrations-and-cli.md  09-framework-integration.md  10-transactions.md  11-functions.md  12-database-backends.md  README.md
examples/ecommerce/: Cargo.toml
examples/ecommerce/migrations/: cb6cfb8684d9_initial_schema.sql
examples/ecommerce/src/: enums.rs  lib.rs  models.rs  testkit.rs
examples/ecommerce/tests/: concurrency_pg.rs  constraints.rs  optimistic.rs  relations_perf.rs  security.rs  stress_sqlite.rs  transactions.rs
examples/orm_api/: Cargo.toml
examples/orm_api/migrations/: a1b2c3d4e5f6_create_users.sql  b2c3d4e5f6a7_create_posts.sql  c3d4e5f6a7b8_add_indexes.sql
examples/orm_api/src/: db.rs  lib.rs  main.rs  models.rs  routers.rs
examples/orm_api/tests/: api.rs
