# Tork ORM workspace.
#
# A standalone workspace, kept separate from `framework/` so the ORM can grow
# independently and be extracted into its own repository later. It depends on the
# framework crates by relative path for the optional native integration; with
# `--no-default-features` it builds with no framework dependency at all.
[workspace]
resolver = "2"
members = [
    "crates/tork-orm",
    "crates/tork-orm-cli",
    "crates/tork-orm-core",
    "crates/tork-orm-macros",
    "examples/orm_api",
]

# Shared metadata inherited by every crate via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["muzakon <hasanmuzak@hotmail.com>"]
license = "MIT"
repository = "https://github.com/muzakon/tork"

[workspace.dependencies]
# ORM crates.
tork-orm-core = { path = "crates/tork-orm-core", version = "0.1.0", default-features = false }
tork-orm-macros = { path = "crates/tork-orm-macros", version = "0.1.0" }

# Framework crates, by relative path, for the native integration (`tork` feature).
tork = { path = "../framework/crates/tork" }
tork-core = { path = "../framework/crates/tork-core" }

# SQLite driver: the safe binding with libsqlite3 statically bundled, so a built
# binary carries no shared-library dependency.
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime and time handling.
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# Serialization, used by examples and tests.
serde_json = "1"
# Temporary files/dirs for tests.
tempfile = "3"
garde = { version = "0.23", features = ["derive", "email"] }

# Procedural macro toolkit.
syn = { version = "2.0.117", features = ["full", "extra-traits", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

# CLI tool dependencies (the migration runner binary).
tork-orm-cli = { path = "crates/tork-orm-cli", version = "0.1.0" }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }

# Release profile: optimize for a fast, lean production binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
