[package]
name = "tork-orm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Migration command-line runner for the Tork ORM."

[[bin]]
name = "tork-orm"
path = "src/bin/tork-orm.rs"

[features]
default = []
# Compile a live network driver so `migrate ...` can target a `postgres://` or
# `mysql://` URL. Off by default to keep the standard binary lean.
postgres = ["tork-orm/postgres"]
mysql = ["tork-orm/mysql"]

[dependencies]
tork-orm = { path = "../tork-orm", default-features = false, features = ["sqlite", "migrations"] }
tork-orm-config = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
