[package]
name = "tork-orm-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the Tork ORM: the Model and QueryResult derives and the relations attribute."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
tork-orm-config.workspace = true
