[package]
name = "orm_api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example application demonstrating the Tork ORM with the Tork web framework."

[dependencies]
tork = { workspace = true }
# This example uses the Tork integration, so it opts into the `tork` feature
# (no longer default — the ORM is framework-agnostic by default).
tork-orm = { path = "../../crates/tork-orm", features = ["tork"] }
# garde's derive references `::garde` directly, so #[api_model] models need it in scope.
garde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }

# Project-level ORM configuration: the target dialect and migration tooling. The
# declared dialect drives compile-time validation of models (an index feature the
# dialect cannot support fails the build) and the migration file naming. Connection
# settings (url, host, port, pool) deliberately live in application code, not here.
[package.metadata.tork]
dialect = "sqlite"

[package.metadata.tork.migrations]
dir                  = "migrations"
file_template        = "{rev}_{slug}"
revision_style       = "hash"
truncate_slug_length = 40
